# vhr-cloudmask

./: .gitignore  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-docs.yml  dockerhub-dev.yml  dockerhub.yml
container/: Dockerfile  container_recipe.py
docs/: AlaskaClouds.md  EthiopiaClouds.md  ModelSurvey.md  SRLite.md  SenegalClouds.md  VHR-Toolkit.md  ValidationSteps.md  VietnamClouds.md  conf.py  index.rst  requirements.txt
latest/: .buildinfo  examples.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
latest/.doctrees/: environment.pickle  examples.doctree  index.doctree  modules.doctree  readme.doctree
latest/_modules/: index.html
latest/_modules/vhr_cloudmask/model/config/: cloudmask_config.html
latest/_modules/vhr_cloudmask/model/pipelines/: cloudmask_cnn_pipeline.html
latest/_modules/vhr_cloudmask/view/: cloudmask_cnn_pipeline_cli.html
latest/_sources/: modules.rst.txt
notebooks/: CloudMasking.ipynb  CloudShadowTesting.ipynb  SRLiteValidation.ipynb  Validation.ipynb
projects/cloud_cnn/configs/experiments/alaska/: alaska-senegal-clouds-dataset-cnn-2021-10-21.csv
projects/cloud_cnn/configs/experiments/disturbance/: global_standardization.yaml
projects/cloud_cnn/configs/experiments/ethiopia/: vietnam_senegal_ethiopia_clouds.yaml
projects/cloud_cnn/configs/experiments/senegal/: senegal-clouds-dataset-rf-2021-10-21.csv  vietnam_senegal_clouds-01-23-2022.yaml  vietnam_senegal_clouds-01-25-2022.yaml
projects/cloud_cnn/configs/experiments/senegal/legacy/: senegal-clouds-dataset-rf-2022-01.csv
projects/cloud_cnn/configs/experiments/vietnam/legacy/: README.md
projects/cloud_cnn/configs/production/: cloud_mask_alaska.csv  cloud_mask_alaska.yaml  cloud_mask_alaska_alaska.yaml  cloud_mask_alaska_alaska_request.yaml  cloud_mask_alaska_fairbanks.yaml  cloud_mask_alaska_howlands.yaml  cloud_mask_alaska_indices.yaml  cloud_mask_alaska_laselva.csv  cloud_mask_alaska_laselva.yaml  cloud_mask_alaska_probability.yaml  cloud_mask_alaska_railroad.yaml  cloud_mask_alaska_senegal.csv  cloud_mask_alaska_senegal_3sl_cas.yaml  cloud_mask_alaska_senegal_3sl_etz.yaml  cloud_mask_alaska_serc.yaml  cloud_mask_alaska_whitesands.yaml  cloud_mask_senegal.csv  cloud_mask_senegal.yaml
projects/cloud_cnn/scripts/: predict.py  preprocess.py  train.py
projects/cloud_cnn/scripts/legacy/: postprocess2.py  postprocess3.py
projects/cloud_cnn/slurm/: predict.sh  slurm_all.sh  slurm_srv.sh
projects/cloud_rf/: README.md  rf_pipeline.py
projects/cloudmask_cnn/configs/experiments/alaska/: alaska-senegal-clouds-dataset-rf-2021-10-21.csv
projects/cloudmask_cnn/configs/experiments/senegal/: vietnam_senegal_clouds-01-25-2022.1.yaml  vietnam_senegal_clouds.yaml
projects/cloudmask_cnn/configs/experiments/senegal/legacy/: README.md  senegal-clouds-dataset-unet.yml
projects/cloudmask_cnn/configs/experiments/vietnam/: vietnam_clouds.yaml
projects/cloudmask_cnn/configs/production/: cloud_mask_alaska_laselva.csv  cloud_mask_alaska_senegal.yaml  cloud_mask_alaska_senegal_3sl_cas.yaml  cloud_mask_alaska_senegal_3sl_srlite.yaml  cloud_mask_alaska_senegal_3sl_srv.yaml  cloud_mask_alaska_siberia.yaml  cloud_mask_alaska_vietnam.csv  cloud_mask_alaska_yukon.yaml  cloud_mask_vietnam.csv  cloud_mask_vietnam.yaml
projects/cloudmask_cnn/configs/senegal/: validation_senegal.py  vietnam_senegal_clouds-01-23-2022.1.yaml  vietnam_senegal_clouds-01-24-2022.yaml  vietnam_senegal_clouds.csv
projects/cloudmask_cnn/configs/senegal/legacy/: senegal-clouds-dataset-cnn-2021-10-21.csv  senegal-clouds-dataset-rf.yml
projects/cloudmask_cnn/configs/vietnam/: vietnam_clouds.csv
projects/cloudmask_cnn/configs/vietnam/legacy/: fix_labels.py  vietnam.yml
projects/cloudmask_cnn/scripts/: postprocess.py  postprocess_alaska.py  postprocess_senegal.py  predict.py  preprocess.py
projects/cloudmask_cnn/scripts/tests/: tiling.py
projects/cloudmask_cnn/slurm/: slurm.sh  slurm_etz.sh
projects/cloudmask_rf/: README.md  rf_pipeline.py
requirements/: Dockerfile  Dockerfile.dev  README.md  container_recipe.py
tests/cloudmask_cnn/: tiling.py
tests/data/: cloudmask_test.yaml
tests/model/config/: test_cloudmask_config.py
tests/model/pipelines/: test_cloudmask_cnn_pipeline.py
tools/: delete_files.py  fix_labels.py  raster_retile.py  validation.py
vhr_cloudmask/: __init__.py
vhr_cloudmask/model/config/: cloudmask_config.py
vhr_cloudmask/model/pipelines/: cloudmask_cnn_pipeline.py
vhr_cloudmask/model/templates/: cloudmask_default.yaml
vhr_cloudmask/view/: cloudmask_cnn_pipeline_cli.py
