[metadata]
name = vhr-cloudmask
version = attr: vhr_cloudmask.__version__
description = Methods for tensorflow deep learning applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nasa-nccs-hpda/vhr-cloudmask
author = jordancaraballo
author_email = jordan.a.caraballo-vega@nasa.gov
license = MIT
license_files = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache License
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://github.com/nasa-nccs-hpda/vhr-cloudmask
    Source =https://github.com/nasa-nccs-hpda/vhr-cloudmask
    Issues = https://github.com/nasa-nccs-hpda/vhr-cloudmask/issues

[options]
packages =
    vhr-cloudmask
platforms = any
python_requires = >= 3.7
install_requires =
    omegaconf
    numpy
    pandas
    tqdm
    tensorflow
    tensorflow-addons
    segmentation-models
    xarray
    rioxarray
    numba
    tensorflow-caney @ git+https://github.com/nasa-nccs-hpda/tensorflow-caney.git@main

[options.extras_require]
test =
    pytest
    coverage[toml]
    black
docs =
    pdoc==8.0.1
all =
    %(docs)s
    %(test)s
