[metadata]
name = vhr-cloudmask
version = attr: vhr_cloudmask.__version__
author = Jordan A. Caraballo-Vega
author_email = jordan.a.caraballo-vega@nasa.gov
url = https://github.com/nasa-nccs-hpda/vhr-cloudmask
description = Deep learning pipeline to cloud mask VHR imagery
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = cloudmask, rioxarray, rasterio, tensorflow
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    geopandas
    rioxarray
    xarray
    rasterio
    pandas
    numpy
    tqdm
    localtileserver
