[metadata]
name = vhr-cloudmask
version = attr: vhr_cloudmask.__version__
author = jordancaraballo
author_email = jordan.a.caraballo-vega@nasa.gov
url = https://github.com/nasa-nccs-hpda/vhr-cloudmask
description = Deep learning pipeline to cloud mask VHR imagery
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cloudmask, rioxarray, rasterio
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://github.com/nasa-nccs-hpda/vhr-cloudmask
    Source = https://github.com/nasa-nccs-hpda/vhr-cloudmask
    Issues = https://github.com/nasa-nccs-hpda/vhr-cloudmask/issues

[options]
packages = find:
zip_safe = True
include_package_data = True
platforms = any
python_requires = >= 3.7
install_requires =
    geopandas
    rioxarray
    xarray
    rasterio
    pandas
    numpy
    tqdm
    localtileserver
    omegaconf
    tensorflow

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    vhr-cloudmask-cli = vhr_cloudmask.view.cloudmask_cnn_pipeline_cli:main

[options.extras_require]
test =
    pytest
    coverage[toml]
    black
docs =
    pdoc==8.0.1
all =
    %(docs)s
    %(test)s